--- a/src/app/mainview/table/table-body/table-body.component.html
+++ b/src/app/mainview/table/table-body/table-body.component.html
@@ -1,4 +1,5 @@
 <div class="table_header">
+
   <ul>
     <li>
       <div class="item">
@@ -28,6 +29,7 @@
 </div>
 
 <div class="table_body">
+  <h1 *ngIf="err" >{{err}}</h1>
   <ul>
     <li *ngFor="let issue of issues|filter:search;let idx = index">
       <app-table-body-item
