--- a/src/app/mainview/table/table-body/table-body.component.html
+++ b/src/app/mainview/table/table-body/table-body.component.html
@@ -15,6 +15,9 @@
         <div class="description">
           <span>description</span>
         </div>
+        <div class="comment">
+          <span>comment</span>
+        </div>
         <div class="date">
           <span>date</span>
         </div>
