--- a/src/app/auth/login/login/login.component.html
+++ b/src/app/auth/login/login/login.component.html
@@ -1,34 +1,16 @@
-
-<form [formGroup]="form">
-  <fieldset>
-      <legend>Login</legend>
-      <div class="form-field">
-          <label>Email:</label>
-          <input name="email" formControlName="email">
+ <div class="login-page">
+    <div class="form">
+      <form [formGroup]="form"
+            class="login-form">
+        <input type="text" placeholder="email" name="email" formControlName="email"/>
         <div class="alert alert-danger"
              *ngIf="form.controls['email'].invalid && form.controls['email'].touched">
-       <p>Input correct email</p>
+          <p>Input correct email</p>
         </div>
-      </div>
-      <div class="form-field">
-          <label>Password:</label>
-          <input name="password" formControlName="password"
-                 type="password">
-        <div
-             *ngIf="form.controls['password'].invalid && form.controls['password'].touched"
-        class="invalid">
-          <p>Input correct password</p>
-        </div>
-
-      </div>
-    <div
-      *ngIf="err"
-      class="invalid">
-      <p>{{err}}</p>
+        <input type="password" placeholder="password" formControlName="password"/>
+        <button class="button button-primary"
+                (click)="login()">login</button>
+        <p class="message">Not registered? <a routerLinkActive="active" [routerLink]="['/register']">Create an account</a></p>
+      </form>
     </div>
-  </fieldset>
-  <div class="form-buttons">
-      <button class="button button-primary"
-              (click)="login()" >Login</button>
   </div>
-</form>
