--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,7 +17,9 @@ $main-font-size:16px;
   list-style: none;
   font-size: 15px;
 }
-
+ul{
+margin-bottom: 0px;
+}
 body {
   background: $main-color;
   font-family: 'Roboto', sans-serif;
