provide option to add issues for current user's

--- a/src/app/mainview/table/table-body/table-body-item/table-body-item.component.html
+++ b/src/app/mainview/table/table-body/table-body-item/table-body-item.component.html
@@ -37,7 +37,6 @@
          *ngIf="authServ.logIn" (click)="hideIssue()">
   </div>
 
-
 </div>
 <div>
   <app-add-comment *ngIf="!openInputComent "
@@ -45,4 +44,5 @@
                    (onchanged)="AddComent($event)">
 
   </app-add-comment>
+<!--  <ngb-datepicker></ngb-datepicker>-->
 </div>
