--- a/src/app/mainview/header/header.component.scss
+++ b/src/app/mainview/header/header.component.scss
@@ -7,6 +7,7 @@
 }
 
 .search_box {
+  display: flex;
   max-width: 1000px;
   background: #29a5d8;
   margin: 0 auto;
@@ -14,9 +15,10 @@
   border-radius: 3px;
 
   input {
+
     border: 0;
     border-bottom: 2px solid #e5edfa;
-    width: 100%;
+    width: 86%;
     outline: none;
     padding: 10px;
     background: transparent;
@@ -26,11 +28,12 @@
     -webkit-transition: width 0.4s ease-in-out;
     transition: width 0.4s ease-in-out;
   }
-
   :focus {
-    border-bottom: 2px solid #fff;
+    margin-right: 0;
+    margin-left: 0;
     width: 250px;
   }
+
 }
 
 ::placeholder {
@@ -38,3 +41,6 @@
 }
 
 
+.mx-wdt{
+ max-width: 100px;
+}
