--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,25 +1,26 @@
 <div class="wrapper">
-<div class="menu">
-<ul>
-  <li>
-    <a routerLinkActive="active"
-    [routerLinkActiveOptions]="{exact: true}"
-    [routerLink]="['/']">home</a>
-  </li>
-  <li>
-    <a routerLinkActive="active" [routerLink]="['/stats']">Stats</a>
-  </li>
-  <li>
-    <a routerLinkActive="active" [routerLink]="['/login']" *ngIf="!auth.logIn">login</a>
-  </li>
-  <li *ngIf="auth.logIn">
-    <a (click)="auth.logout()">logout</a>
-  </li>
-  <li>
-    <a routerLinkActive="active" [routerLink]="['/register']" *ngIf="!auth.logIn">Register</a>
-  </li>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-main-color">
+    <a routerLinkActive="active" class="navbar-brand"
+       [routerLinkActiveOptions]="{exact: true}"
+       [routerLink]="['/']">home</a>
+    <div class=" collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a routerLinkActive="active" class="nav-link" [routerLink]="['/stats']" *ngIf="auth.isAdmin()">Stats</a>
+        </li>
+        <li class="nav-item">
+          <a routerLinkActive="active" class="nav-link" [routerLink]="['/login']" *ngIf="!auth.logIn">login</a>
+        </li>
+        <li *ngIf="auth.logIn" class="nav-item">
+          <a (click)="auth.logout()" class="nav-link">logout</a>
+        </li>
+        <li class="nav-item">
+          <a routerLinkActive="active" [routerLink]="['/register']" *ngIf="!auth.logIn" class="nav-link">Register</a>
+        </li>
+      </ul>
 
-</ul>
+
 </div>
-  <router-outlet></router-outlet>
+  </nav>
+<router-outlet></router-outlet>
 </div>
