--- a/src/app/mainview/table/table-body/add-issue/add-issue.component.scss
+++ b/src/app/mainview/table/table-body/add-issue/add-issue.component.scss
@@ -1,3 +1,34 @@
 .test {
 height: 300px;
 }
+@mixin item($wdt){
+  width: $wdt;
+  padding: 0 15px;
+}
+.userinfo {
+  @include item(20%);
+}
+.status {
+  @include item(20%);
+  display: flex;
+  padding-right: 3px;
+}
+.mainbutton {
+  padding: 3px;
+}
+.description {
+  @include item(30%)
+}
+.date {
+  @include item(2 0%);
+  display: flex;
+}
+#size {
+  height: 70%;
+}
+.input-size {
+
+}
+.date {
+  width: 15%;
+}
