--- a/src/app/auth/login/login/login.component.html
+++ b/src/app/auth/login/login/login.component.html
@@ -8,7 +8,13 @@
              *ngIf="form.controls['email'].invalid && form.controls['email'].touched">
           <p>Input correct email</p>
         </div>
-        <input type="password" placeholder="password" formControlName="password"/>
+        <input type="password" placeholder="password"
+               formControlName="password"
+               ngbPopover="Correct password should include six numbers"
+               triggers="mouseenter:mouseleave"
+               popoverTitle="Password"
+               placement="right"
+        />
         <div class="alert alert-danger"
              *ngIf="form.controls['password'].invalid && form.controls['password'].touched">
           <p>Input correct password</p>
