--- a/src/app/mainview/table/table-body/table-body-item/add-comment/add-comment.component.html
+++ b/src/app/mainview/table/table-body/table-body-item/add-comment/add-comment.component.html
@@ -1,6 +1,7 @@
 <div class="item">
   <textarea type="text" placeholder="input comment"
+
             [(ngModel)]="comment"></textarea>
-  <button (click)="addComent()"> add</button>
+  <button type="button" (click)="addComent()" class="btn btn-primary"> add</button>
 </div>
 
