--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,12 @@
     <div class=" collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a routerLinkActive="active" class="nav-link" [routerLink]="['/stats']" *ngIf="auth.isAdmin()">Stats</a>
+          <a routerLinkActive="active" class="nav-link" [routerLink]="['/stats']"
+             *ngIf="auth.isAdmin()">Stats</a>
+        </li>
+        <li class="nav-item">
+          <a routerLinkActive="active" class="nav-link" [routerLink]="['/newuser']"
+             *ngIf="auth.isAdmin()">add new user</a>
         </li>
         <li class="nav-item">
           <a routerLinkActive="active" class="nav-link" [routerLink]="['/login']" *ngIf="!auth.logIn">login</a>
@@ -14,6 +19,7 @@
         <li *ngIf="auth.logIn" class="nav-item">
           <a (click)="auth.logout()" class="nav-link">logout</a>
         </li>
+
         <li class="nav-item">
           <a routerLinkActive="active" [routerLink]="['/register']" *ngIf="!auth.logIn" class="nav-link">Register</a>
         </li>
