--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,8 @@
              *ngIf="auth.isAdmin()">Stats</a>
         </li>
         <li class="nav-item">
-          <a routerLinkActive="active" class="nav-link" [routerLink]="['/newuser']"
+          <a routerLinkActive="active" class="nav-link"
+             [routerLink]="['/newuser']"
              *ngIf="auth.isAdmin()">add new user</a>
         </li>
         <li class="nav-item">
