--- a/src/app/auth/login/login/login.component.html
+++ b/src/app/auth/login/login/login.component.html
@@ -1,5 +1,5 @@
  <div class="login-page">
-   <ngb-alert *ngIf="err" type="danger" (closed)="close()">{{err}}</ngb-alert>
+   <ngb-alert *ngIf="err" type="danger" (closed)="close()">input corret email or password</ngb-alert>
     <div class="form">
       <form [formGroup]="form"
             class="login-form">
